# Trig-Const

./: Cargo.toml  LICENSE-MIT  LICENSE.txt  README.md
.github/workflows/: rust.yml
benches/: performance.rs
examples/: std_cmp.rs
src/: acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atan2.rs  atanh.rs  cos.rs  exp.rs  floor.rs  k_cos.rs  k_sin.rs  k_tan.rs  lib.rs  ln.rs  log1p.rs  macros.rs  pow.rs  rem_pio2.rs  rem_pio2_large.rs  scalbn.rs  sin.rs  tan.rs
tests/: brute.rs
